--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Description: FREEtree, a tree-based method for high dimensional longitudinal dat
     leaf and the original features as splitting variables at splitting nodes, 
     FREEtree maintains interpretability and improves computational efficiency.
 Depends: R (>= 3.1.0)
-License: CC0
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Imports: glmertree, pre, WGCNA
