--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,5 +20,10 @@ Depends: R (>= 3.1.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-Imports: glmertree, pre, WGCNA
+Imports: glmertree, pre, WGCNA, MASS
 RoxygenNote: 7.0.2
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 2.1.0)
+VignetteBuilder: knitr
