--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 0.1.0
 Authors@R: c(
 		person("Yuancheng", "Xu", email = "xuyuancheng0@gmail.com", role = c("aut")),
 		person("Athanasse", "Zafirov", email = "zafirov@gmail.com", role = c("cre")),
-		person("Christina", "Ramirez", email = "cr@ucla.edu", role = c("aut"))),
-        person("Dan", "Kojis", email = "x@xxx.edu", role = c("aut"))),
+		person("Christina", "Ramirez", email = "cr@ucla.edu", role = c("aut")),
+        person("Dan", "Kojis", email = "x@xxx.edu", role = c("aut")),
         person("Min", "Tan", email = "xx@xxx.edu", role = c("aut")))
 Description: FREEtree, a tree-based method for high dimensional longitudinal data with 
     correlated features. FREEtree deals with longitudinal data by using a 
